--- a/app/src/main/res/layout/article_item.xml
+++ b/app/src/main/res/layout/article_item.xml
@@ -18,72 +18,71 @@
         android:id="@+id/itemViewGroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginBottom="12dp"
-        app:cardCornerRadius="6dp">
+        android:layout_margin="@dimen/default_spacing"
+        app:cardCornerRadius="@dimen/default_corner_radius">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:padding="6dp">
+            android:layout_height="wrap_content"
+            android:padding="@dimen/default_padding">
 
             <ImageView
                 android:id="@+id/articleImage"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/image_height"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toTopOf="@+id/articleTitle"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/brazil_opening" />
+                app:setArticleImage="@{article.urlToImage}"
+                android:contentDescription="@string/description_image"
+                tools:src="@drawable/placeholder" />
 
             <TextView
                 android:id="@+id/articleTitle"
-                android:layout_width="0dp"
-                android:layout_height="36dp"
-                android:layout_marginStart="4dp"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:textSize="14sp"
-                android:textStyle="bold"
-                app:setArticleItemFormatted="@{article.title}"
-                app:layout_constraintBottom_toTopOf="@+id/articleDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin_top"
+                android:fontFamily="@font/roboto_medium"
+                android:textAppearance="?attr/textAppearanceHeadline5"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/articleImage"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/articleImage"
+                app:setArticleItemFormatted="@{article.title}"
                 tools:text="@string/tools_article_title" />
 
             <TextView
                 android:id="@+id/articleDescription"
-                android:layout_width="0dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_margin_top"
                 android:ellipsize="end"
-                android:maxLines="4"
-                android:textSize="12sp"
-                app:setArticleItemFormatted="@{article.description}"
-                app:layout_constraintBottom_toTopOf="@+id/articleMoreInfo"
+                android:maxLines="3"
+                android:fontFamily="@font/roboto_medium"
+                android:textAppearance="?attr/textAppearanceHeadline6"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/articleImage"
-                app:layout_constraintTop_toBottomOf="@+id/articleTitle"
-                app:layout_constraintVertical_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/articleTitle"
+                app:setArticleItemFormatted="@{article.description}"
                 tools:text="@string/tools_article_desc" />
 
             <TextView
                 android:id="@+id/articleMoreInfo"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:textAlignment="textEnd"
-                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="@dimen/default_margin_top"
+                android:fontFamily="@font/roboto_medium"
+                android:gravity="center"
+                android:text="@string/more_info"
+                android:visibility="gone"
+                android:textAppearance="?attr/textAppearanceSubtitle1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/articleImage"
-                app:layout_constraintTop_toBottomOf="@+id/articleDescription"
-                app:layout_constraintVertical_chainStyle="spread_inside"
-                tools:text="Mais Informações" />
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/articleDescription" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
